PokeCLI/Showdown/Grammar/ShowdownParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Showdown.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

namespace PokeCLI.Showdown.Grammar
{
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
    [System.CLSCompliant(false)]
    public partial class ShowdownParser : Parser {
        protected static DFA[] decisionToDFA;
        protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
        public const int
            T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
            T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, HP=16, ATK=17,
            DEF=18, SP_ATK=19, SP_DEF=20, SPE=21, COLON=22, NEWLINE=23, NUMBER=24,
            WORD=25, WHITESPACE=26, ANY=27;
        public const int
            RULE_team = 0, RULE_pokemon = 1, RULE_nickname = 2, RULE_name = 3, RULE_sex = 4,
            RULE_item = 5, RULE_ability = 6, RULE_level = 7, RULE_shiny = 8, RULE_happiness = 9,
            RULE_evs = 10, RULE_stats = 11, RULE_stat = 12, RULE_nature = 13, RULE_ivs = 14,
            RULE_moves = 15, RULE_move = 16;
        public static readonly string[] ruleNames = {
            "team", "pokemon", "nickname", "name", "sex", "item", "ability", "level",
            "shiny", "happiness", "evs", "stats", "stat", "nature", "ivs", "moves",
            "move"
        };

        private static readonly string[] _LiteralNames = {
            null, "'('", "')'", "'Ability'", "'Level'", "'Shiny'", "'Happiness'",
            "'Nature'", "'M'", "'F'", "'@'", "'Yes'", "'EVs'", "'/'", "'IVs'", "'-'",
            "'HP'", "'Atk'", "'Def'", "'SpA'", "'SpD'", "'Spe'", "':'", null, null,
            null, "' '"
        };
        private static readonly string[] _SymbolicNames = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, "HP", "ATK", "DEF", "SP_ATK", "SP_DEF", "SPE",
            "COLON", "NEWLINE", "NUMBER", "WORD", "WHITESPACE", "ANY"
        };
        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [NotNull]
        public override IVocabulary Vocabulary
        {
            get
            {
                return DefaultVocabulary;
            }
        }

        public override string GrammarFileName { get { return "Showdown.g4"; } }

        public override string[] RuleNames { get { return ruleNames; } }

        public override string SerializedAtn { get { return new string(_serializedATN); } }

        static ShowdownParser() {
            decisionToDFA = new DFA[_ATN.NumberOfDecisions];
            for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
                decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
            }
        }

        public ShowdownParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

        public ShowdownParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
            : base(input, output, errorOutput)
        {
            Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
        }

        public partial class TeamContext : ParserRuleContext {
            public ITerminalNode Eof() { return GetToken(ShowdownParser.Eof, 0); }
            public PokemonContext[] pokemon() {
                return GetRuleContexts<PokemonContext>();
            }
            public PokemonContext pokemon(int i) {
                return GetRuleContext<PokemonContext>(i);
            }
            public ITerminalNode[] NEWLINE() { return GetTokens(ShowdownParser.NEWLINE); }
            public ITerminalNode NEWLINE(int i) {
                return GetToken(ShowdownParser.NEWLINE, i);
            }
            public TeamContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_team; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterTeam(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitTeam(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitTeam(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public TeamContext team() {
            TeamContext _localctx = new TeamContext(Context, State);
            EnterRule(_localctx, 0, RULE_team);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 38;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    do {
                        {
                            {
                                State = 34; pokemon();
                                State = 36;
                                ErrorHandler.Sync(this);
                                _la = TokenStream.LA(1);
                                if (_la==NEWLINE) {
                                    {
                                        State = 35; Match(NEWLINE);
                                    }
                                }

                            }
                        }
                        State = 40;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    } while ( _la==WORD );
                    State = 42; Match(Eof);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class PokemonContext : ParserRuleContext {
            public ITerminalNode[] NEWLINE() { return GetTokens(ShowdownParser.NEWLINE); }
            public ITerminalNode NEWLINE(int i) {
                return GetToken(ShowdownParser.NEWLINE, i);
            }
            public ITerminalNode[] COLON() { return GetTokens(ShowdownParser.COLON); }
            public ITerminalNode COLON(int i) {
                return GetToken(ShowdownParser.COLON, i);
            }
            public AbilityContext ability() {
                return GetRuleContext<AbilityContext>(0);
            }
            public MovesContext moves() {
                return GetRuleContext<MovesContext>(0);
            }
            public NameContext name() {
                return GetRuleContext<NameContext>(0);
            }
            public SexContext sex() {
                return GetRuleContext<SexContext>(0);
            }
            public ItemContext item() {
                return GetRuleContext<ItemContext>(0);
            }
            public LevelContext level() {
                return GetRuleContext<LevelContext>(0);
            }
            public ShinyContext shiny() {
                return GetRuleContext<ShinyContext>(0);
            }
            public HappinessContext happiness() {
                return GetRuleContext<HappinessContext>(0);
            }
            public EvsContext evs() {
                return GetRuleContext<EvsContext>(0);
            }
            public NatureContext nature() {
                return GetRuleContext<NatureContext>(0);
            }
            public IvsContext ivs() {
                return GetRuleContext<IvsContext>(0);
            }
            public NicknameContext nickname() {
                return GetRuleContext<NicknameContext>(0);
            }
            public PokemonContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_pokemon; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterPokemon(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitPokemon(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitPokemon(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public PokemonContext pokemon() {
            PokemonContext _localctx = new PokemonContext(Context, State);
            EnterRule(_localctx, 2, RULE_pokemon);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 50;
                    ErrorHandler.Sync(this);
                    switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
                        case 1:
                        {
                            {
                                State = 44; nickname();
                                State = 45; Match(T__0);
                                State = 46; name();
                                State = 47; Match(T__1);
                            }
                        }
                            break;
                        case 2:
                        {
                            State = 49; name();
                        }
                            break;
                    }
                    State = 56;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__0) {
                        {
                            State = 52; Match(T__0);
                            State = 53; sex();
                            State = 54; Match(T__1);
                        }
                    }

                    State = 59;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__9 || _la==WORD) {
                        {
                            State = 58; item();
                        }
                    }

                    State = 61; Match(NEWLINE);
                    State = 62; Match(T__2);
                    State = 63; Match(COLON);
                    State = 64; ability();
                    State = 65; Match(NEWLINE);
                    State = 71;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__3) {
                        {
                            State = 66; Match(T__3);
                            State = 67; Match(COLON);
                            State = 68; level();
                            State = 69; Match(NEWLINE);
                        }
                    }

                    State = 78;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__4) {
                        {
                            State = 73; Match(T__4);
                            State = 74; Match(COLON);
                            State = 75; shiny();
                            State = 76; Match(NEWLINE);
                        }
                    }

                    State = 85;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__5) {
                        {
                            State = 80; Match(T__5);
                            State = 81; Match(COLON);
                            State = 82; happiness();
                            State = 83; Match(NEWLINE);
                        }
                    }

                    State = 90;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__11) {
                        {
                            State = 87; evs();
                            State = 88; Match(NEWLINE);
                        }
                    }

                    State = 96;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==WORD) {
                        {
                            State = 92; nature();
                            State = 93; Match(T__6);
                            State = 94; Match(NEWLINE);
                        }
                    }

                    State = 101;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__13) {
                        {
                            State = 98; ivs();
                            State = 99; Match(NEWLINE);
                        }
                    }

                    State = 103; moves();
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class NicknameContext : ParserRuleContext {
            public ITerminalNode WORD() { return GetToken(ShowdownParser.WORD, 0); }
            public NicknameContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_nickname; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterNickname(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitNickname(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitNickname(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public NicknameContext nickname() {
            NicknameContext _localctx = new NicknameContext(Context, State);
            EnterRule(_localctx, 4, RULE_nickname);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 105; Match(WORD);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class NameContext : ParserRuleContext {
            public ITerminalNode WORD() { return GetToken(ShowdownParser.WORD, 0); }
            public NameContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_name; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterName(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitName(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitName(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public NameContext name() {
            NameContext _localctx = new NameContext(Context, State);
            EnterRule(_localctx, 6, RULE_name);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 107; Match(WORD);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SexContext : ParserRuleContext {
            public SexContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_sex; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterSex(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitSex(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSex(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SexContext sex() {
            SexContext _localctx = new SexContext(Context, State);
            EnterRule(_localctx, 8, RULE_sex);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 109;
                    _la = TokenStream.LA(1);
                    if ( !(_la==T__7 || _la==T__8) ) {
                        ErrorHandler.RecoverInline(this);
                    }
                    else {
                        ErrorHandler.ReportMatch(this);
                        Consume();
                    }
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ItemContext : ParserRuleContext {
            public ITerminalNode[] WORD() { return GetTokens(ShowdownParser.WORD); }
            public ITerminalNode WORD(int i) {
                return GetToken(ShowdownParser.WORD, i);
            }
            public ItemContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_item; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterItem(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitItem(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitItem(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ItemContext item() {
            ItemContext _localctx = new ItemContext(Context, State);
            EnterRule(_localctx, 10, RULE_item);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 112;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la==T__9) {
                        {
                            State = 111; Match(T__9);
                        }
                    }

                    State = 115;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    do {
                        {
                            {
                                State = 114; Match(WORD);
                            }
                        }
                        State = 117;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    } while ( _la==WORD );
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class AbilityContext : ParserRuleContext {
            public ITerminalNode[] WORD() { return GetTokens(ShowdownParser.WORD); }
            public ITerminalNode WORD(int i) {
                return GetToken(ShowdownParser.WORD, i);
            }
            public AbilityContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_ability; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterAbility(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitAbility(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitAbility(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public AbilityContext ability() {
            AbilityContext _localctx = new AbilityContext(Context, State);
            EnterRule(_localctx, 12, RULE_ability);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 120;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    do {
                        {
                            {
                                State = 119; Match(WORD);
                            }
                        }
                        State = 122;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    } while ( _la==WORD );
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class LevelContext : ParserRuleContext {
            public ITerminalNode NUMBER() { return GetToken(ShowdownParser.NUMBER, 0); }
            public LevelContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_level; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterLevel(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitLevel(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitLevel(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public LevelContext level() {
            LevelContext _localctx = new LevelContext(Context, State);
            EnterRule(_localctx, 14, RULE_level);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 124; Match(NUMBER);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ShinyContext : ParserRuleContext {
            public ShinyContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_shiny; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterShiny(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitShiny(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitShiny(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ShinyContext shiny() {
            ShinyContext _localctx = new ShinyContext(Context, State);
            EnterRule(_localctx, 16, RULE_shiny);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 126; Match(T__10);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class HappinessContext : ParserRuleContext {
            public ITerminalNode NUMBER() { return GetToken(ShowdownParser.NUMBER, 0); }
            public HappinessContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_happiness; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterHappiness(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitHappiness(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitHappiness(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public HappinessContext happiness() {
            HappinessContext _localctx = new HappinessContext(Context, State);
            EnterRule(_localctx, 18, RULE_happiness);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 128; Match(NUMBER);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class EvsContext : ParserRuleContext {
            public ITerminalNode COLON() { return GetToken(ShowdownParser.COLON, 0); }
            public StatsContext stats() {
                return GetRuleContext<StatsContext>(0);
            }
            public EvsContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_evs; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterEvs(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitEvs(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitEvs(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public EvsContext evs() {
            EvsContext _localctx = new EvsContext(Context, State);
            EnterRule(_localctx, 20, RULE_evs);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 130; Match(T__11);
                    State = 131; Match(COLON);
                    State = 132; stats();
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class StatsContext : ParserRuleContext {
            public StatContext[] stat() {
                return GetRuleContexts<StatContext>();
            }
            public StatContext stat(int i) {
                return GetRuleContext<StatContext>(i);
            }
            public StatsContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_stats; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterStats(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitStats(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitStats(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public StatsContext stats() {
            StatsContext _localctx = new StatsContext(Context, State);
            EnterRule(_localctx, 22, RULE_stats);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 138;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    do {
                        {
                            {
                                State = 134; stat();
                                State = 136;
                                ErrorHandler.Sync(this);
                                _la = TokenStream.LA(1);
                                if (_la==T__12) {
                                    {
                                        State = 135; Match(T__12);
                                    }
                                }

                            }
                        }
                        State = 140;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    } while ( _la==NUMBER );
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class StatContext : ParserRuleContext {
            public ITerminalNode NUMBER() { return GetToken(ShowdownParser.NUMBER, 0); }
            public ITerminalNode HP() { return GetToken(ShowdownParser.HP, 0); }
            public ITerminalNode ATK() { return GetToken(ShowdownParser.ATK, 0); }
            public ITerminalNode DEF() { return GetToken(ShowdownParser.DEF, 0); }
            public ITerminalNode SP_ATK() { return GetToken(ShowdownParser.SP_ATK, 0); }
            public ITerminalNode SP_DEF() { return GetToken(ShowdownParser.SP_DEF, 0); }
            public ITerminalNode SPE() { return GetToken(ShowdownParser.SPE, 0); }
            public StatContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_stat; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterStat(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitStat(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitStat(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public StatContext stat() {
            StatContext _localctx = new StatContext(Context, State);
            EnterRule(_localctx, 24, RULE_stat);
            int _la;
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 142; Match(NUMBER);
                    State = 143;
                    _la = TokenStream.LA(1);
                    if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HP) | (1L << ATK) | (1L << DEF) | (1L << SP_ATK) | (1L << SP_DEF) | (1L << SPE))) != 0)) ) {
                        ErrorHandler.RecoverInline(this);
                    }
                    else {
                        ErrorHandler.ReportMatch(this);
                        Consume();
                    }
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }

        public partial class NatureContext : ParserRuleContext {
            public ITerminalNode WORD() { return GetToken(ShowdownParser.WORD, 0); }
            public NatureContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_nature; } }
            public override void EnterRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.EnterNature(this);
            }
            public override void ExitRule(IParseTreeListener listener) {
                IShowdownListener typedListener = listener as IShowdownListener;
                if (typedListener != null) typedListener.ExitNature(this);
            }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
                IShowdownVisitor<TResult> typedVisitor = visitor as IShowdownVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitNature(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public NatureContext nature() {
            NatureContext _localctx = new NatureContext(Context, State);
            EnterRule(_localctx, 26, RULE_nature);
            try {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 145; Match(WORD);
                }
            }
            catch (RecognitionException re) {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally {
                ExitRule();
            }
            return _localctx;
        }
